--- a/src/scss/50_core-plugins/_file-explorer.scss
+++ b/src/scss/50_core-plugins/_file-explorer.scss
@@ -75,40 +75,52 @@ body {
 body.colorful-folders_collapse-indicator {
     .nav-folder-children > .nav-folder,
     .nav-files-container > div > .nav-folder {
-        &:nth-child(9n+2) {
+        &:nth-child(12n+2) {
             --nav-folder-collapse-color: var(--nav-folder-1-collapse-color);
         }
     
-        &:nth-child(9n+3) {
+        &:nth-child(12n+3) {
             --nav-folder-collapse-color: var(--nav-folder-2-collapse-color);
         }
     
-        &:nth-child(9n+4) {
+        &:nth-child(12n+4) {
             --nav-folder-collapse-color: var(--nav-folder-3-collapse-color);
         }
     
-        &:nth-child(9n+5) {
+        &:nth-child(12n+5) {
             --nav-folder-collapse-color: var(--nav-folder-4-collapse-color);
         }
     
-        &:nth-child(9n+6) {
+        &:nth-child(12n+6) {
             --nav-folder-collapse-color: var(--nav-folder-5-collapse-color);
         }
     
-        &:nth-child(9n+7) {
+        &:nth-child(12n+7) {
             --nav-folder-collapse-color: var(--nav-folder-6-collapse-color);
         }
     
-        &:nth-child(9n+8) {
+        &:nth-child(12n+8) {
             --nav-folder-collapse-color: var(--nav-folder-7-collapse-color);
         }
     
-        &:nth-child(9n+9) {
+        &:nth-child(12n+9) {
             --nav-folder-collapse-color: var(--nav-folder-8-collapse-color);
         }
     
-        &:nth-child(9n+10) {
+        &:nth-child(12n+10) {
             --nav-folder-collapse-color: var(--nav-folder-9-collapse-color);
+        }
+            
+        &:nth-child(12n+11) {
+            --nav-folder-collapse-color: var(--nav-folder-10-collapse-color);
+        }
+    
+        &:nth-child(12n+12) {
+            --nav-folder-collapse-color: var(--nav-folder-11-collapse-color);
+        }
+    
+        &:nth-child(12n+13) {
+            --nav-folder-collapse-color: var(--nav-folder-12-collapse-color);
         }
     }
 }
@@ -215,32 +227,32 @@ body.colorful-folders_text {
     
         &:nth-child(12n+8) {
             --nav-folder-color: var(--nav-folder-7-color);
-            --nav-folder-bg-color-hover: var(--nav-folder-1-bg-color-hover);
+            --nav-folder-bg-color-hover: var(--nav-folder-7-bg-color-hover);
         }
     
         &:nth-child(12n+9) {
             --nav-folder-color: var(--nav-folder-8-color);
-            --nav-folder-bg-color-hover: var(--nav-folder-2-bg-color-hover);
+            --nav-folder-bg-color-hover: var(--nav-folder-8-bg-color-hover);
         }
     
         &:nth-child(12n+10) {
             --nav-folder-color: var(--nav-folder-9-color);
-            --nav-folder-bg-color-hover: var(--nav-folder-3-bg-color-hover);
+            --nav-folder-bg-color-hover: var(--nav-folder-9-bg-color-hover);
         }
     
         &:nth-child(12n+11) {
             --nav-folder-color: var(--nav-folder-10-color);
-            --nav-folder-bg-color-hover: var(--nav-folder-4-bg-color-hover);
+            --nav-folder-bg-color-hover: var(--nav-folder-10-bg-color-hover);
         }
     
         &:nth-child(12n+12) {
             --nav-folder-color: var(--nav-folder-11-color);
-            --nav-folder-bg-color-hover: var(--nav-folder-5-bg-color-hover);
+            --nav-folder-bg-color-hover: var(--nav-folder-11-bg-color-hover);
         }
     
         &:nth-child(12n+13) {
             --nav-folder-color: var(--nav-folder-12-color);
-            --nav-folder-bg-color-hover: var(--nav-folder-6-bg-color-hover);
+            --nav-folder-bg-color-hover: var(--nav-folder-12-bg-color-hover);
         }
     }
 }
